--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,9 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: 'Noto Serif SC', serif;
+  --font-mono: 'Noto Serif SC', serif;
+  --font-serif: 'Noto Serif SC', serif;
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -115,8 +116,10 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    font-family: 'Noto Serif SC', serif !important;
   }
   body {
     @apply bg-background text-foreground;
+    font-family: 'Noto Serif SC', serif !important;
   }
 }
